# rust-web

./: .env  .gitignore  .gitpod.yml  404.html  Cargo.toml  Makefile  Makefile.toml  README.md  RUST_WEB2.md  TEMPLATE.html  Vagrantfile  WEB_R3.html  book.toml  diesel.toml  git-push.sh  index.html  print.html  pyproject.toml  requirements.txt  rust-toolchain.toml  rust.json  rustfmt.toml  schema.patch  searchindex.js  searchindex.json  tarpaulin-report.html  tarpaulin.toml  workspace_rust-web.code-workspace
.github/: FUNDING.yml
.github/workflows/: actions.yml  build-and-test.yml  pages-deploy.yml  rust.yml
diesel/: DIESEL.html
diesel/diesel_v2/: DIESEL_VER_2.html
diesel/diesel_v2/mysql/all_about_inserts/: Cargo.toml
diesel/diesel_v2/mysql/getting_started_step_1/: Cargo.toml
diesel/diesel_v2/mysql/getting_started_step_2/: Cargo.toml
diesel/diesel_v2/mysql/getting_started_step_3/: Cargo.toml
diesel/diesel_v2/postgres/advanced-blog-cli/: Cargo.toml
diesel/diesel_v2/postgres/all_about_updates/: Cargo.toml
diesel/diesel_v2/postgres/getting_started_step_1/: Cargo.toml
diesel/diesel_v2/sqlite/: SET_UP_DIESEL_SQLITE.html
diesel/diesel_v2/sqlite/all_about_inserts/: Cargo.toml
diesel/diesel_v2/sqlite/getting_started_step_1/: Cargo.toml  SETUP_DIESEL_STEP_1.html
diesel/diesel_v2/sqlite/getting_started_step_2/: Cargo.toml  SETUP_DIESEL_STEP_2.html  diesel.toml
diesel/diesel_v2/sqlite/getting_started_step_3/: Cargo.toml  SETUP_DIESEL_STEP_3.html
diesel/web_edu/: WEB_EDU.html
diesel/web_edu/web_edu_lib/: Cargo.toml
diesel/web_edu/web_edu_lib/src/: lib.rs
diesel/web_edu/web_edu_lib/src/core/: sale.rs
diesel/web_edu/web_edu_setup/: SETUP_WEB_EDU.html
diesel/web_r3_postgres/: .env  Cargo.toml
diesel/web_r3_postgres/src/: cli.rs
docker/: .dockerignore  Dockerfile  build_docker.sh  run_docker.sh
http_wrapper/simple-api/src/: main.rs
rust/: RUST.html
shared/src/core/: mod.rs
src/: main.rs
workspace/: RUST_WEB2.md  SUMMARY.md  TEMPLATE.md  WEB_R3.md  ________WORKSPACE________.md  book.toml
workspace/actix_actor/twitter-clone-rust/: .env  Cargo.toml
workspace/actix_actor/twitter-clone-rust/src/: main.rs
workspace/actix_actor/web_r3_shop_site_actix/: Cargo.toml
workspace/diesel-2.0.x/sqlite/all_about_inserts/: Cargo.toml
workspace/diesel-2.0.x/sqlite/diesel2_sqlite_step1/: Cargo.toml
workspace/diesel-2.0.x/sqlite/diesel2_sqlite_step2/src/: lib.rs
workspace/diesel-2.0.x/sqlite/diesel2_sqlite_step3/: README.md  SETUP_DIESEL_STEP_3.md
workspace/diesel-2.0.x/sqlite/diesel2_sqlite_step3/src/: lib.rs
workspace/diesel/diesel_v2/: DIESEL_VER_2.md
workspace/diesel/diesel_v2/postgres/all_about_inserts/: Cargo.toml
workspace/diesel/diesel_v2/postgres/custom_types/: Cargo.toml
workspace/diesel/diesel_v2/sqlite/: SET_UP_DIESEL_SQLITE.md
workspace/diesel/diesel_v2/sqlite/all_about_inserts/: Cargo.toml
workspace/diesel/diesel_v2/sqlite/diesel2_sqlite_step2/: .env  Cargo.toml
workspace/diesel/diesel_v2/sqlite/diesel2_sqlite_step3/: Cargo.toml
workspace/diesel/web_edu/: .env
workspace/diesel/web_edu/web_edu_lib/: Cargo.toml
workspace/diesel/web_edu/web_edu_lib/src/: model.rs  viewmodel.rs
workspace/diesel/web_edu/web_edu_test/: Cargo.toml
workspace/diesel_orm/: DIESEL.md
workspace/diesel_orm/diesel_v2/: DIESEL_VER_2.md
workspace/diesel_orm/diesel_v2/postgres/getting_started_step_2/: Cargo.toml
workspace/diesel_orm/diesel_v2/postgres/getting_started_step_3/: Cargo.toml
workspace/diesel_orm/diesel_v2/sqlite/: SET_UP_DIESEL_SQLITE.md
workspace/diesel_orm/diesel_v2/sqlite/db/: diesel2_sample_steps.sqlite
workspace/diesel_orm/diesel_v2/sqlite/diesel_demo_steps_sqlite/: .env  Cargo.toml  SETUP_DIESEL_STEPS.md  diesel.toml
workspace/diesel_orm/diesel_v2/sqlite/diesel_demo_steps_sqlite/migrations/20170124012402_post-user/: down.sql  up.sql
workspace/diesel_orm/diesel_v2/sqlite/diesel_demo_steps_sqlite/src/: lib.rs  models.rs  schema.rs  viewmodels.rs
workspace/diesel_orm/diesel_v2/sqlite/diesel_demo_steps_sqlite/src/core/: connection.rs  mod.rs  post.rs  user.rs
workspace/diesel_orm/web_edu/: WEB_EDU.md
workspace/diesel_orm/web_edu/web_edu_bin/: Cargo.toml
workspace/diesel_orm/web_edu/web_edu_bin/src/: web_edu_main.rs
workspace/diesel_orm/web_edu/web_edu_lib/: SALES.md
workspace/diesel_orm/web_edu/web_edu_lib/src/: schema.rs
workspace/http_wrapper/simple-api/: Cargo.toml
workspace/projects/web_edu/: WEB_EDU.md
workspace/projects/web_edu/web_edu_bin/src/: web_edu_main.rs
workspace/projects/web_edu/web_edu_lib/: SALES.md
workspace/projects/web_edu/web_edu_lib/src/: model.rs  schema.rs
workspace/projects/web_edu/web_edu_setup/: .env  SETUP_WEB_EDU.md
workspace/projects/web_edu/web_edu_setup/db/: web_edu.sqlite  web_edu_test.sqlite
workspace/rest-api/http_wrapper/simple-api/: Makefile  Todo.postman_collection.json
workspace/rocket_orm/pp/pp-r_setup_01/: Cargo.toml
workspace/rust/: DIESEL.md  RUST.md
workspace/shared/: Cargo.toml
workspace/shared/src/: lib.rs
workspace/shared/src/core/: .env  connection.rs  mod.rs
workspace/tokio_runtime/web_r3_tokio/: Cargo.toml
workspace/web_edu/: web_edu.md
workspace/web_edu/web_edu_bin/: Cargo.toml
workspace/web_edu/web_edu_bin/src/: web_edu_main.rs
workspace/web_edu/web_edu_lib/: Cargo.toml
workspace/web_edu/web_edu_lib/src/: lib.rs  model.rs  schema.rs  viewmodel.rs
workspace/web_edu/web_edu_lib/src/core/: connection.rs  mod.rs  product.rs  product_create.rs  product_delete.rs  product_variant.rs  product_variant_edit.rs  sale.rs
workspace/web_edu/web_edu_lib/test/common/: mod.rs
workspace/web_edu/web_edu_model/: Cargo.toml
workspace/web_edu/web_edu_model/src/: web_edu_model.rs
workspace/web_edu/web_edu_setup/: .env  DIESEL.md  SETUP.md  SETUP_WEB_EDU.md  diesel.toml  web_edu.sqlite  web_edu_test.sqlite
workspace/web_edu/web_edu_setup/migrations/2023-02-23-173809_create_sales/: down.sql  (+1 more)
workspace/web_edu/web_edu_test/: Cargo.toml
workspace/web_edu/web_edu_test/test/: Cargo.toml
workspace/web_r3/web_r3_event/: Cargo.toml
(+16 files in other folders)
