[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [

    "workspace/shared",        
    "workspace/diesel_orm/diesel_v2/mysql/all_about_inserts",    
    "workspace/diesel_orm/diesel_v2/mysql/getting_started_step_1",
    "workspace/diesel_orm/diesel_v2/mysql/getting_started_step_2",
    "workspace/diesel_orm/diesel_v2/mysql/getting_started_step_3",
    "workspace/diesel_orm/diesel_v2/postgres/all_about_inserts",
    "workspace/diesel_orm/diesel_v2/postgres/all_about_updates",
    "workspace/diesel_orm/diesel_v2/postgres/getting_started_step_1",
    "workspace/diesel_orm/diesel_v2/postgres/getting_started_step_2",
    "workspace/diesel_orm/diesel_v2/postgres/getting_started_step_3",    
    "workspace/diesel_orm/diesel_v2/sqlite/diesel_demo_steps_sqlite",

   "workspace/projects/web_edu/web_edu_bin",
   "workspace/projects/web_edu/web_edu_lib",
   "workspace/projects/web_edu/web_edu_test",
  
   "workspace/diesel_orm/web_r3_postgres",
  

   "workspace/rest-api/http_wrapper/simple-api",
   "workspace/rest-api/iron_diesel_jwt_api",

   "workspace/tokio_runtime/web_r3_tokio",

   "workspace/web_events/web_r3_event", 
  
   "workspace/rocket_orm/pp/pp-maud_02", 
   "workspace/rocket_orm/ria-ch1-time-api",



  
]


exclude = [    
    "workspace/actix_actor/twitter-clone-rust",
    "workspace/rocket_orm/pp/pp-r_setup_01",
    "workspace/actix_actor/web_r3_shop_site_actix",
    "workspace/rocket_orm/pp/pp-web_bank",
    "workspace/net/tcp/r3-rust-project-projects-chat_serv",
]
