[package]
name = "web_edu_bin"
version = "0.1.0"
authors = ["Arman Riazi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
msrv="1.31.0"

[[bin]]
doc = true
name = "web_edu_main"
path = "src/web_edu_main.rs"


[dependencies]
web_edu_lib = { path = "../web_edu_lib",  optional = false , default-features = true}
serde = "1.0.90"
serde_derive = "1.0.90"
diesel = {version = "2.0.0", features = ["sqlite"]}
dotenv = "0.15.0"
failure = "0.1.5"
serde_json="1.0.0"
anyhow="1.0.20"