[package]
name = "web_edu_bin"
version = "0.1.0"
authors = ["Arman Riazi"]
edition = "2021"


[[bin]]
doc = true
name = "web_edu_main"
path = "src/web_edu_main.rs"


[dependencies]
web_edu_lib = { path = "../web_edu_lib",  optional = false , default-features = true}
serde = {version="1.0.90", features = ["derive"],  optional = false , default-features = true}
serde_derive = "1.0.90"
diesel = {version = "2.0.0", features = ["sqlite"]}
dotenv = "0.15.0"
serde_json="1.0.0"
failure = "0.1.5"
anyhow="1.0.20"