[package]
name = "web_edu_lib"
version = "0.1.0"
authors = ["Arman Riazi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
web_edu_model = { path = "../web_edu_model",  optional = false , default-features = true}
shared = { path = "../../../shared",  optional = false , default-features = true}
serde = { version = "1.0", features = ["derive"], optional = true , default-features = true}
serde_json="1.0.0"
anyhow="1.0.68"

[dev-dependencies]
proptest = "1"
pretty_assertions = "1"

[[test]]
doc = true
name = "integration_dep_test"
path = "test/integration_dep_test.rs"
test = true