[package]
name = "web_edu_model"
version = "0.1.0"
authors = ["Arman Riazi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dev-dependencies]
diesel = "2.0.2"


[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true , default-features = true}