[package]
name = "web_edu_model"
version = "0.1.0"
authors = ["Arman Riazi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"], optional = true , default-features = true}