[package]
name = "all_about_inserts_mysql"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
diesel = { version = "2.0.0",  git = "https://github.com/diesel-rs/diesel.git", features = ["mysql", "chrono"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
chrono = { version = "0.4.19", default-features = false, features = ["clock", "std"] }

[lib]
doc = false
