[package]
name = "diesel_demo_steps_sqlite"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
diesel = { version = "2.0.0", features = ["sqlite", "chrono"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
chrono = { version = "0.4.19", default-features = false, features = ["clock", "std"] }
dotenvy = "0.15"

[[bin]]
name = "show_posts"
doc = false

[[bin]]
name = "write_post"
doc = false

[[bin]]
name = "delete_post"
doc = false

[[bin]]
name = "publish_post"
doc = false



[lib]
doc = false
